--- a/my-sql/package.json
+++ b/my-sql/package.json
@@ -19,7 +19,10 @@
         "eslint-plugin-standard": "^2.0.1",
         "koa": "^2.0.0",
         "koa-router": "^7.3.0",
+        "koa-bodyparser": "3.2.0",
         "sequelize": "3.24.1",
-        "mysql": "2.11.1"
+        "mysql": "2.11.1",
+        "nunjucks": "2.4.2",
+        "mz": "2.4.0"
     }
 }
